# lidar-sdk-connection

./: .gitignore  README.md  bag2pcd.sh
data_collection/: docker-compose.yml
data_collection/lidar_sdk_node/: Dockerfile  config.yaml  new_node_entrypoint.sh
data_collection/roscore/: Dockerfile  bag2pcd.sh  new_entrypoint.sh
data_decode/: docker-compose.yml
data_decode/rosbag_decode/: Dockerfile  config.yaml
data_decode/rosbag_decode_roscore/: Dockerfile  new_entrypoint.sh  rosbag_decode.py
packet_to_pointcloud/: docker-compose.yml
packet_to_pointcloud/lidar_sdk_node/: config.yaml  new_node_entrypoint.sh
packet_to_pointcloud/roscore/: Dockerfile  new_entrypoint.sh
processing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lidarconfig.xml  lidarconfig_westmead_site.xml  test_visualise  test_visualise.cpp
